[gd_scene load_steps=3 format=3 uid="uid://8oxtceiwqnw6"]

[ext_resource type="Script" uid="uid://b4gr302xskrwf" path="res://scenes/FlowerInstance.gd" id="1_bylvs"]
[ext_resource type="Resource" uid="uid://bgr53ghld1jhr" path="res://flowers/BasicFlower.tres" id="2_bylvs"]

[node name="FlowerInstance" type="Node2D"]
script = ExtResource("1_bylvs")
flower_data = ExtResource("2_bylvs")

[node name="StemSprite" type="Sprite2D" parent="."]

[node name="BloomSprite" type="Sprite2D" parent="."]
